# ultimate-tic-tac-toe-engine

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  README.md
devbot/: bot  main.cpp
include/: IOPLayer.h  abstractGame.h  abstractMove.h  abstractPlayer.h  engine.h  field.h  helpers.h  player.h  simulator.h
src/: main.cpp
src/engine/: engine.cpp
src/game/player/: abstractPlayer.cpp
src/helpers/: helpers.cpp
src/io/: IOPlayer.cpp
src/simulator/: simulator.cpp
src/simulator/field/: field.cpp
tests/: maintest.h  test.cc
